2004-01-15  Matthias Wimmer  <m@tthias.net>

    * jadc2s.c: Connection to sm is closed last, slightly better conf errors
    * mio/limits.c: This file is not used, remove it
    * mio/rate.c: same

2004-01-14  Matthias Wimmer  <m@tthias.net>

    * log.c: Do not limit the length of a filename for the logfile
    * util.h: same

2004-01-10  Matthias Wimmer  <m@tthias.net>

    * connect.c: Flag the root element as sent (for stream error handling)
    * jadc2s.c: send stream error for authentication timeouts
    * jadc2s.h: same

2004-01-09  Ryan Eatmon      <reatmon@jabber.org>

    * conn.c: Fixed big bug in \0 handling in the buffer.  Flash clients
              were experiencing disconnects.

2004-01-03  Matthias Wimmer  <m@tthias.net>

    * jadc2s.h: added two more stream errors
    * connect.c: same

2003-12-28  Matthias Wimmer  <m@tthias.net>

    * conn.c: copy the root_name, it gets free()d afterwards
    * Makefile.am: add jadc2s.xml.dist to the distribution package
    * util/config.c: config_get_attr(...) was broken and has been fixed
    * clients.c: added support for aliases
    * jadc2s.c: same
    * jadc2s.h: same
    * jadc2s.xml.dist: same

2003-12-26  Matthias Wimmer  <m@tthias.net>

    * clients.c: improvements for stream errors
    * conn.c: same
    * connect.c: same
    * jadc2s.c: same
    * jadc2s.h: same

2003-12-21  Matthias Wimmer  <m@tthias.net>

    * configure.in: added IPv6 checks
    * connect.c: added IPv6 support
    * mio/mio.c: same

2003-12-17  Matthias Wimmer  <m@tthias.net>

    * Makefile.am: do overwrite existing configuration file
    * jadc2s.xml.dist: renamed file jadc2s.xml
    * NEWS: send and log connection information
    * PROTO: same
    * TODO: same
    * clients.c: same
    * conn.c: same
    * connect.c: same
    * jadc2s.h: same

2003-12-16  Matthias Wimmer  <m@tthias.net>

    * jadc2s.c: the -c option to select a configuration file did not work

2003-12-14  Matthias Wimmer  <m@tthias.net>
